--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="mode_classic">Classic mode</string>
     <string name="mode_drunk">Drunk mode</string>
     <string name="mode_ship">Ship mode</string>
+    <string name="ball_velocity">Ball velocity</string>
 </resources>
