--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="mode_drunk">Drunk mode</string>
     <string name="mode_ship">Ship mode</string>
     <string name="ball_velocity">Ball velocity</string>
+    <string name="level_editor">Level editor</string>
 </resources>
