--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="insert_level_name_here">Insert level name here</string>
     <string name="save">Save</string>
     <string name="play">Play</string>
+    <string name="disclaimer">The authors do not pursue advertising goals and are not responsible for the results of this application usage.</string>
 </resources>
